--- a/imobile/static/user/css/login.css
+++ b/imobile/static/user/css/login.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:400);
+/* @import url(http://fonts.googleapis.com/css?family=Roboto:400);
 body {
   background-color:#fff;
   -webkit-font-smoothing: antialiased;
@@ -35,4 +35,4 @@ h4 {
 
 .wrapper {
     text-align: center;
-}
+} */
